--- a/ShikhanobishInvoiceGenaretor/Pages/InvoiceGen.razor
+++ b/ShikhanobishInvoiceGenaretor/Pages/InvoiceGen.razor
@@ -3,6 +3,7 @@
 @using Flurl.Http;
 @using ShikhanobishInvoiceGenaretor.Models
 @page "/{invoiceid}"
+@inject IJSRuntime jsRunTime
 
 <div class="page-content container">
     <div class="page-header text-blue-d2">
@@ -17,14 +18,14 @@
 
         <div class="page-tools">
             <div class="action-buttons">
-                <a class="btn bg-white btn-light mx-1px text-95" href="#" data-title="Print">
+                <a class="btn bg-white btn-light mx-1px text-95 hideWhenPrint" href="#" data-title="Print" @onclick="Invoiceprint">
                     <i class="mr-1 fa fa-print text-primary-m1 text-120 w-2"></i>
                     Print
                 </a>
-                <a class="btn bg-white btn-light mx-1px text-95" href="#" data-title="PDF">
+                @*<a class="btn bg-white btn-light mx-1px text-95 hideWhenPrint" href="#" data-title="PDF">
                     <i class="mr-1 fa fa-file-pdf-o text-danger-m1 text-120 w-2"></i>
                     Export
-                </a>
+                </a>*@
             </div>
         </div>
     </div>
@@ -237,6 +238,10 @@
             card = item.cardID;
             medium = item.medium;
         }
+    }
+    private void Invoiceprint()
+    {
+        jsRunTime.InvokeVoidAsync("InvoicePrint");
     }
 
 }
