--- a/ShikhanobishInvoiceGenaretor/Pages/_Host.cshtml
+++ b/ShikhanobishInvoiceGenaretor/Pages/_Host.cshtml
@@ -32,5 +32,7 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="~/jquery/jquery.min.js"></script>
+    <script src="~/js/InvoicePrint.js"></script>
 </body>
 </html>
