--- a/ShikhanobishInvoiceGenaretor/Pages/InvoiceGen.razor
+++ b/ShikhanobishInvoiceGenaretor/Pages/InvoiceGen.razor
@@ -18,7 +18,7 @@
 
         <div class="page-tools">
             <div class="action-buttons">
-                <a class="btn bg-white btn-light mx-1px text-95 hideWhenPrint" href="#" data-title="Print" @onclick="Invoiceprint">
+                <a class="btn bg-white btn-light mx-1px text-95 hideWhenPrint" href="@invoiceid" data-title="Print" @onclick="Invoiceprint">
                     <i class="mr-1 fa fa-print text-primary-m1 text-120 w-2"></i>
                     Print
                 </a>
@@ -71,8 +71,7 @@
                             <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">ID:</span> @id</div>
 
                             <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Issue Date:</span> @issueDate</div>
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">TrxID:</span> @trxID</div>
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Card:</span> @card</div>
+                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Card Number:</span> @card</div>
                             <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Medium:</span> @medium</div>
 
                             <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Status:</span> <span class="badge badge-success badge-pill px-25">@paidStatus</span></div>
@@ -132,24 +131,25 @@
                         <table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1">
                             <thead class="bg-none bgc-default-tp1">
                                 <tr class="text-white">
-                                    <th class="opacity-2">StudentID</th>
-                                    <th>TrxID</th>
-                                    <th>Card</th>
-                                    <th>Medium</th>
-                                    
+                                    <th class="opacity-2">Description</th>
+                                    <th class="opacity-2">Type</th>
+                                    <th>Total</th>
+
                                 </tr>
                             </thead>
 
-                            <tbody class="text-95 text-secondary-d3">
-                                <tr></tr>
-                                <tr>
-                                    <td>@studentid</td>
-                                    <td>@trxID</td>
-                                    <td>@card</td>
-                                    <td class="text-95">@medium</td>
-                                    
-                                </tr>
-                            </tbody>
+                            @foreach (var item in showList)
+                            {
+                                <tbody class="text-95 text-secondary-d3">
+                                    <tr></tr>
+                                    <tr>
+                                        <td>@item.description</td>
+                                        <td>@item.type</td>
+                                        <td class="text-95">@item.amountTaka</td>
+
+                                    </tr>
+                                </tbody>
+                            }
                         </table>
                     </div>
                     
@@ -165,7 +165,7 @@
                                     SubTotal
                                 </div>
                                 <div class="col-5">
-                                    <span class="text-120 text-secondary-d1">$2,250</span>
+                                    <span class="text-120 text-secondary-d1">@subTotal</span>
                                 </div>
                             </div>
 
@@ -174,7 +174,7 @@
                                     Tax (10%)
                                 </div>
                                 <div class="col-5">
-                                    <span class="text-110 text-secondary-d1">$225</span>
+                                    <span class="text-110 text-secondary-d1">@taxAmoubnt</span>
                                 </div>
                             </div>
 
@@ -183,7 +183,7 @@
                                     Total Amount
                                 </div>
                                 <div class="col-5">
-                                    <span class="text-150 text-success-d3 opacity-2">$2,475</span>
+                                    <span class="text-150 text-success-d3 opacity-2">@totalPayment</span>
                                 </div>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                     <hr />
 
                     <div>
-                        <span class="text-secondary-d1 text-105">Thank you for your business</span>
+                        <span class="text-secondary-d1 text-105">Thank you for staying with Shikkhanobish.</span>
 
                     </div>
                 </div>
@@ -215,11 +215,14 @@
     string card = "";
     string medium = "";
     int studentid = 0;
-
+    int subTotal, totalPayment;
+    double taxAmoubnt;
+    public List<StudentPaymentHistory> showList = new List<StudentPaymentHistory>();
 
     protected override async Task OnInitializedAsync()
     {
         await getStudentPaymenHistory();
+        
     }
 
     public async Task getStudentPaymenHistory()
@@ -229,15 +232,22 @@
             invoiceID = invoiceid
         }).ReceiveJson<List<StudentPaymentHistory>>();
 
-        foreach (var item in res)
+        showList = res;
+        StudentPaymentHistory item = new StudentPaymentHistory();
+        item = showList[0];
+        id = item.invoiceID;
+        name = item.name;
+        studentid = item.studentID;
+        trxID = item.trxID;
+        issueDate = item.date;
+        card = item.cardID;
+        medium = item.medium;
+        for (int i  = 0; i < showList.Count; i++)
         {
-            id = item.invoiceID;
-            name = item.name;
-            studentid = item.studentID;
-            trxID = item.trxID;
-            card = item.cardID;
-            medium = item.medium;
+            subTotal = showList[i].amountTaka;
         }
+        taxAmoubnt = subTotal * .10;
+        totalPayment =(int) (subTotal + taxAmoubnt);
     }
     private void Invoiceprint()
     {
